--- a/CafeOrderApp/src/main/resources/application.properties
+++ b/CafeOrderApp/src/main/resources/application.properties
@@ -4,11 +4,12 @@
 # 기본 설정
 # =========================
 
-# 서버 포트 (기본: 8080)
+# 서버 포트 (기본 : 8080)
 server.port=8081
 
 # =========================
-# 데이터베이스 연결
+# 데이터베이스 연결 (여기서 MySQL에 직접 생성한 DB 이름으로 변경)
+# username과 password에도 사용자명과 비밀번호를 입력
 # =========================
 
 spring.datasource.url=jdbc:mysql://localhost:3306/cafeapp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -21,6 +22,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # =========================
 
 # Hibernate DDL 설정 (create, update, validate, none)
+# 개발 중에는 update, 운영에서는 validate 또는 none 권장
 spring.jpa.hibernate.ddl-auto=update
 
 # SQL 로그 출력
@@ -28,6 +30,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # 사용할 DB 방언
+# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # =========================
