--- a/CafeOrderApp/src/main/resources/application.properties
+++ b/CafeOrderApp/src/main/resources/application.properties
@@ -12,8 +12,8 @@ server.port=8081
 # username과 password에도 사용자명과 비밀번호를 입력
 # =========================
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cafeapp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=user
+spring.datasource.url=jdbc:mysql://localhost:3306/cafeapp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
