--- a/CafeOrderApp/src/main/resources/settings.yml
+++ b/CafeOrderApp/src/main/resources/settings.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8081 # 8080 -> 8081 changed
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cafe_db?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: your_mysql_user
-    password: your_mysql_password
+    url: jdbc:mysql://localhost:3306/cafeapp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    username: root # your_mysql_user
+    password: 1234 # your_mysql_password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
