--- a/CafeOrderApp/src/main/resources/application.properties
+++ b/CafeOrderApp/src/main/resources/application.properties
@@ -13,9 +13,14 @@ server.port=8081
 # =========================
 
 spring.datasource.url=jdbc:mysql://localhost:3306/cafeapp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-spring.datasource.username=root
+spring.datasource.username=user
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# html 처리용 내용
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 
 # =========================
 # JPA 설정
@@ -31,7 +36,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # 사용할 DB 방언
 # spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # =========================
 # 기타 인코딩 설정 (한글 깨짐 방지)
