--- a/CafeOrderApp/src/main/resources/settings.yml
+++ b/CafeOrderApp/src/main/resources/settings.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/cafeapp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-    username: root # your_mysql_user
+    username: user # your_mysql_user
     password: 1234 # your_mysql_password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
