--- a/CafeOrderApp/src/main/resources/application.properties
+++ b/CafeOrderApp/src/main/resources/application.properties
@@ -35,8 +35,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # 사용할 DB 방언
-# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # =========================
 # 기타 인코딩 설정 (한글 깨짐 방지)
